--- a/app/src/main/res/layout/part_range_selection_item.xml
+++ b/app/src/main/res/layout/part_range_selection_item.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lecture_item_wrapper_card"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_marginVertical="4dp"
     android:background="@color/white"
     android:clickable="true"
@@ -12,42 +12,49 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:paddingHorizontal="10dp">
+        android:padding="10dp">
 
         <ImageView
-            android:id="@+id/lecture_item_logo"
+            android:id="@+id/range_selection_item_logo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/tests" />
 
-        <TextView
-            android:id="@+id/lecture_item_topic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/lecture_item_logo"
-            android:contentDescription="@null"
-            android:text="@string/example_text_1"
-            android:textColor="@color/teal_green"
-            android:textSize="@dimen/default_text_size_large"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/range_selection_item_logo"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/range_selection_item_topic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_toRightOf="@id/range_selection_item_logo"
+                android:layout_weight="1"
+                android:contentDescription="@null"
+                android:paddingVertical="1dp"
+                android:text="@string/example_text_1"
+                android:textColor="@color/teal_green"
+                android:textSize="@dimen/default_text_size"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/lecture_item_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/lecture_item_topic"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/lecture_item_logo"
-            android:text="@string/example_text_2"
-            android:textColor="@color/teal_green"
-            android:textSize="@dimen/default_text_size" />
+            <TextView
+                android:id="@+id/range_selection_item_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/range_selection_item_topic"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:paddingVertical="1dp"
+                android:text="@string/example_text_2"
+                android:textColor="@color/teal_green"
+                android:textSize="@dimen/default_text_size" />
 
+        </LinearLayout>
 
     </RelativeLayout>
 
