--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="default_text_size">14sp</dimen>
     <dimen name="default_text_size_x2">28sp</dimen>
     <dimen name="range_list_margin_bottom">16dp</dimen>
+    <dimen name="padding_slide_view_horizontal">5dp</dimen>
 </resources>
