--- a/app/src/main/res/layout/fragment_lecture_slide_view_item.xml
+++ b/app/src/main/res/layout/fragment_lecture_slide_view_item.xml
@@ -5,26 +5,29 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/labelHeader"
-        android:layout_width="@dimen/java_logo_size"
-        android:layout_height="@dimen/java_logo_size"
-        android:layout_marginBottom="20dp"
-        android:contentDescription="@string/app_name_short"
-        android:src="@drawable/java_logo"
-        app:layout_constraintBottom_toTopOf="@+id/label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/label"
-        android:layout_width="wrap_content"
+        android:id="@+id/lecture_slide_view_image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/default_text_size_large"
-        android:textStyle="bold"
-        android:textColor="@color/white"
+        android:layout_marginTop="-20dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/app_name_short"
+        android:maxHeight="300dp"
+        android:src="@drawable/java_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/lecture_slide_view_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/default_text_size_large"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lecture_slide_view_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
