--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#A0A0A0</color>
     <color name="teal_green">#018876</color>
+    <color name="dark_blue">#036</color>
 </resources>
