--- a/app/src/main/res/layout/fragment_lecture_slide_view_item.xml
+++ b/app/src/main/res/layout/fragment_lecture_slide_view_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.ortiz.touchview.TouchImageView
         android:id="@+id/lecture_slide_view_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
