--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,248 +4,161 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_blue"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/activity_app_bar"
+    <LinearLayout
+        android:id="@+id/main_linear_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:paddingHorizontal="@dimen/padding_menu_horizontal"
-        android:theme="@style/Theme.JavaProClientApp.AppBarOverlay"
-        app:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/transparent"
-            app:popupTheme="@style/Theme.JavaProClientApp.PopupOverlay" />
+            android:layout_height="match_parent"
+            android:background="@color/dark_blue"
+            android:orientation="vertical">
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <ImageView
-        android:id="@+id/main_java_logo_im"
-        android:layout_width="@dimen/java_logo_size"
-        android:layout_height="@dimen/java_logo_size"
-        android:layout_marginHorizontal="@dimen/padding_horizontal"
-        android:layout_marginTop="?actionBarSize"
-        android:layout_marginBottom="30dp"
-        android:contentDescription="@string/java_logo_content_description"
-        android:src="@drawable/java_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/main_select_section_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/padding_horizontal"
-        android:layout_marginTop="20dp"
-        android:paddingHorizontal="10dp"
-        android:text="@string/select_section"
-        android:textColor="@color/white"
-        android:textSize="@dimen/default_text_size"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_java_logo_im" />
-
-    <LinearLayout
-        android:id="@+id/main_section_list_0"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/padding_horizontal"
-        android:layout_marginTop="10dp"
-        android:weightSum="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_select_section_tv">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/section_0_card"
-            android:layout_width="0dp"
-            android:layout_height="140dp"
-            android:layout_margin="@dimen/margin_main_section_card"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:clickable="true"
-            android:foreground="?selectableItemBackground"
-            android:padding="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_main_section_icon"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/tests" />
+                    android:id="@+id/main_image_view_1"
+                    android:layout_width="@dimen/back_button_size"
+                    android:layout_height="@dimen/back_button_size"
+                    android:layout_marginStart="@dimen/back_button_margin"
+                    android:layout_marginTop="@dimen/back_button_margin"
+                    android:src="@drawable/java_logo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/main_text_view_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_horizontal"
-                    android:text="@string/section_lectures"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/default_text_size_large"
-                    android:textStyle="bold" />
+                    android:layout_marginStart="32dp"
+                    android:text="@string/hi_example"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_xlarge"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/main_image_view_1"
+                    app:layout_constraintTop_toTopOf="@id/main_image_view_1" />
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/section_1_card"
-            android:layout_width="0dp"
-            android:layout_height="140dp"
-            android:layout_margin="@dimen/margin_main_section_card"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:clickable="true"
-            android:foreground="?selectableItemBackground"
-            android:padding="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/main_text_view_2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginTop="32dp"
+                android:text="@string/search_topic"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_large_x2"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_main_section_icon"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/tests" />
+            <SearchView
+                android:id="@+id/main_search_view_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginVertical="16dp"
+                android:queryHint="Szukaj"
+                android:textColorHint="@android:color/darker_gray"
+                android:theme="@style/SearchView.Main" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_horizontal"
-                    android:text="@string/section_laboratories"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/default_text_size_large"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/main_section_list_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/padding_horizontal"
-        android:weightSum="2"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@id/main_coordinator_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_section_list_0">
+        app:layout_constraintTop_toBottomOf="@+id/main_linear_1">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/section_2_card"
-            android:layout_width="0dp"
-            android:layout_height="140dp"
-            android:layout_margin="@dimen/margin_main_section_card"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:clickable="true"
-            android:foreground="?selectableItemBackground"
-            android:padding="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="32dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/main_text_view_3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:text="@string/topics"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/text_size_xxlarge"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_main_section_icon"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/tests" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_horizontal"
-                    android:text="@string/section_tests"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/default_text_size_large"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/section_3_card"
-            android:layout_width="0dp"
-            android:layout_height="140dp"
-            android:layout_margin="@dimen/margin_main_section_card"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:clickable="true"
-            android:foreground="?selectableItemBackground"
-            android:padding="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/main_text_view_4"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:text="@string/view_more"
+                android:textAlignment="viewEnd"
+                android:textColor="@android:color/darker_gray"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_main_section_icon"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:src="@drawable/tests" />
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center_horizontal"
-                    android:text="@string/section_help_links"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/default_text_size_large"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_recycler_view_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
+            android:clipToPadding="false"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp" />
 
     </LinearLayout>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/main_coordinator_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/main_bottom_app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabCradleMargin="8dp"
+            app:fabCradleRoundedCornerRadius="10dp"
+            app:fabCradleVerticalOffset="8dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/main_bottom_nav_view_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:background="@android:color/transparent"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:menu="@menu/bottom_nav_menu" />
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/main_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/baseline_add_24"
+            app:layout_anchor="@id/main_bottom_app_bar" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
