--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,35 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.JavaProApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/dark_blue</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="Theme.JavaProApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
-        <item name="background">@color/dark_blue</item>
+        <item name="colorPrimary">@color/dark_blue</item>
     </style>
 
-    <style name="Theme.JavaProApp.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="SearchView.Main" parent="Widget.AppCompat.SearchView">
+        <item name="android:background">@android:color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
-        <item name="colorSecondary">@color/dark_blue</item>
-    </style>
-
-    <style name="Theme.JavaProClientApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.JavaProClientApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
-    </style>
-
-    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
-        <item name="android:textStyle">italic</item>
     </style>
 
 </resources>
