--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#A0A0A0</color>
     <color name="teal_green">#018876</color>
     <color name="dark_blue">#036</color>
+    <color name="darker_grey">#FAAA</color>
 </resources>
