--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,39 +49,63 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/main_text_view_2"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
-                android:layout_marginTop="32dp"
-                android:text="@string/search_topic"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_large_x2"
-                android:textStyle="bold" />
+                android:paddingTop="16dp">
 
-            <SearchView
-                android:id="@+id/main_search_view_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
-                android:layout_marginVertical="16dp"
-                android:queryHint="Szukaj"
-                android:textColorHint="@android:color/darker_gray"
-                android:theme="@style/SearchView.Main" />
+                <TextView
+                    android:id="@+id/main_text_view_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:text="@string/search_topic"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_large_x2"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <SearchView
+                    android:id="@+id/main_search_view_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:queryHint="Szukaj"
+                    android:textColorHint="@color/darker_grey"
+                    android:theme="@style/SearchView.Main"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/main_text_view_2" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/main_image_view_2"
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:src="@drawable/baseline_keyboard_arrow_up_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/main_linear_1" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:orientation="vertical"
+        android:paddingBottom="@dimen/bottom_nav_view_height"
         app:layout_constraintEnd_toStartOf="@id/main_coordinator_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_linear_1">
+        app:layout_constraintTop_toBottomOf="@+id/main_image_view_2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,15 +131,16 @@
                 android:layout_weight="1"
                 android:text="@string/view_more"
                 android:textAlignment="viewEnd"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="bold" />
+                android:textColor="@color/darker_grey"
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_recycler_view_1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:clipToPadding="false"
             android:paddingStart="24dp"
@@ -143,11 +168,12 @@
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/main_bottom_nav_view_1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="@dimen/bottom_nav_view_height"
                 android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:foreground="?android:attr/selectableItemBackground"
-                app:menu="@menu/bottom_nav_menu" />
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/main_menu" />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
 
@@ -155,8 +181,10 @@
             android:id="@+id/main_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/dark_blue"
             android:contentDescription="@string/app_name"
             android:src="@drawable/baseline_add_24"
+            android:tint="@color/white"
             app:layout_anchor="@id/main_bottom_app_bar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
